# AVE

./: .gitignore  CNAME  Cargo.toml  README.md  asset.html  detail.html  index.html
.github/workflows/: cargo-update.yml  pages.yml
assets/: app.js  asset.js  detail.js  styles.css
assets/data/: asset-index.json  manifest.json
exploits/1999/: EXP-AVE-1999-00001.toml  EXP-AVE-1999-0006.toml  EXP-AVE-1999-0012.toml  EXP-AVE-1999-0045.toml  EXP-AVE-1999-0052.toml  EXP-AVE-1999-0058.toml  EXP-AVE-1999-0065.toml  EXP-AVE-1999-0089.toml  EXP-AVE-1999-0090.toml  EXP-AVE-1999-0100.toml  EXP-AVE-1999-0113.toml  EXP-AVE-1999-0116.toml  EXP-AVE-1999-0125.toml  EXP-AVE-1999-0128.toml  EXP-AVE-1999-0136.toml  EXP-AVE-1999-0165.toml  EXP-AVE-1999-0169.toml  EXP-AVE-1999-0170.toml  EXP-AVE-1999-0176.toml  EXP-AVE-1999-0177.toml  EXP-AVE-1999-0178.toml  EXP-AVE-1999-0183.toml  EXP-AVE-1999-0184.toml  EXP-AVE-1999-0196.toml  EXP-AVE-1999-0200.toml  EXP-AVE-1999-0234.toml  EXP-AVE-1999-0240.toml  EXP-AVE-1999-0244.toml  EXP-AVE-1999-0249.toml  EXP-AVE-1999-0271.toml  EXP-AVE-1999-0301.toml  EXP-AVE-1999-0309.toml  EXP-AVE-1999-0315.toml  EXP-AVE-1999-0317.toml  EXP-AVE-1999-0320.toml  EXP-AVE-1999-0344.toml  EXP-AVE-1999-0350.toml  EXP-AVE-1999-0351.toml  EXP-AVE-1999-0352.toml  EXP-AVE-1999-0357.toml  (+141 more)
exploits/2000/: EXP-AVE-2000-0002.toml  EXP-AVE-2000-0003.toml  EXP-AVE-2000-0004.toml  EXP-AVE-2000-0010.toml  EXP-AVE-2000-0011.toml  EXP-AVE-2000-0012.toml  EXP-AVE-2000-0013.toml  (+188 more)
generate-vuln-data-rust/: Cargo.toml
scripts/: generate-vuln-data.py
src/: main.rs
(+6860 files in other folders)
