[package]
name = "generate-ave-pages"
version = "0.1.0"
edition = "2021"
description = "High-performance async parallel TOML vulnerability data generator (Rust port of generate-vuln-data.py)"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
rayon = "1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
